; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_fat.c_FatReadClusterChain.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_fat.c_FatReadClusterChain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i64 }

@.str = private unnamed_addr constant [83 x i8] c"FatReadClusterChain() StartClusterNumber = %d NumberOfClusters = %d Buffer = 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i64, i64, i64, i64*)* @FatReadClusterChain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FatReadClusterChain(%struct.TYPE_4__* %0, i64 %1, i64 %2, i64 %3, i64* %4) #0 {
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i64* %4, i64** %10, align 8
  %14 = load i64, i64* %8, align 8
  store i64 %14, i64* %13, align 8
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* %8, align 8
  %17 = load i64, i64* %9, align 8
  %18 = call i32 @TRACE(i8* getelementptr inbounds ([83 x i8], [83 x i8]* @.str, i64 0, i64 0), i64 %15, i64 %16, i64 %17)
  %19 = load i64, i64* %8, align 8
  %20 = icmp sgt i64 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @ASSERT(i32 %21)
  br label %23

23:                                               ; preds = %30, %5
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* %13, align 8
  %27 = load i64, i64* %9, align 8
  %28 = call i64 @FatReadAdjacentClusters(%struct.TYPE_4__* %24, i64 %25, i64 %26, i64 %27, i64* %11, i64* %12)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %46

30:                                               ; preds = %23
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* %13, align 8
  %33 = sub nsw i64 %32, %31
  store i64 %33, i64* %13, align 8
  %34 = load i64, i64* %9, align 8
  %35 = load i64, i64* %11, align 8
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = mul nsw i64 %35, %38
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 1
  %42 = load i64, i64* %41, align 8
  %43 = mul nsw i64 %39, %42
  %44 = add nsw i64 %34, %43
  store i64 %44, i64* %9, align 8
  %45 = load i64, i64* %12, align 8
  store i64 %45, i64* %7, align 8
  br label %23

46:                                               ; preds = %23
  %47 = load i64*, i64** %10, align 8
  %48 = icmp ne i64* %47, null
  br i1 %48, label %49, label %52

49:                                               ; preds = %46
  %50 = load i64, i64* %12, align 8
  %51 = load i64*, i64** %10, align 8
  store i64 %50, i64* %51, align 8
  br label %52

52:                                               ; preds = %49, %46
  %53 = load i64, i64* %11, align 8
  %54 = icmp sgt i64 %53, 0
  %55 = zext i1 %54 to i32
  ret i32 %55
}

declare dso_local i32 @TRACE(i8*, i64, i64, i64) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @FatReadAdjacentClusters(%struct.TYPE_4__*, i64, i64, i64, i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
